--- a/ProjectSourceCode/docker-compose.yaml
+++ b/ProjectSourceCode/docker-compose.yaml
@@ -1,16 +1,22 @@
+version: '3.8'  # Add this line for clarity
+
 services:
   db:
     image: postgres:14
     env_file: .env
+    restart: always  # ensures DB restarts if it crashes
     expose:
       - '5432'
+    ports:
+      - '5432:5432'  # optional: for accessing DB locally via pgAdmin or psql
     volumes:
       - group-project:/var/lib/postgresql/data
       - ./src/init_data:/docker-entrypoint-initdb.d
+
   web:
     image: node:lts
     user: 'node'
-    working_dir: /repository
+    working_dir: /repository/src 
     env_file: .env
     environment:
       - NODE_ENV=production
@@ -21,5 +27,6 @@ services:
     volumes:
       - ./:/repository
     command: 'npm run testandrun'
+
 volumes:
   group-project:
