--- a/ProjectSourceCode/src/package.json
+++ b/ProjectSourceCode/src/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "express-session": "^1.18.1",
     "pg": "^8.10.0"
   }
 }
