Updated readme.md draft

--- a/ProjectSourceCode/docker-compose.yaml
+++ b/ProjectSourceCode/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
       - '3000:3000'
     volumes:
       - ./:/repository
-    command: 'npm run testandrun'
+    command: sh -c "npm install && npm run testandrun"
 
 volumes:
   group-project:
