--- a/ProjectSourceCode/docker-compose.yaml
+++ b/ProjectSourceCode/docker-compose.yaml
@@ -1,14 +1,14 @@
-version: '3.8'  # Add this line for clarity
+version: '3.8'
 
 services:
   db:
     image: postgres:14
     env_file: .env
-    restart: always  # ensures DB restarts if it crashes
+    restart: always
     expose:
       - '5432'
     ports:
-      - '5432:5432'  # optional: for accessing DB locally via pgAdmin or psql
+      - '5432:5432'
     volumes:
       - group-project:/var/lib/postgresql/data
       - ./src/init_data:/docker-entrypoint-initdb.d
@@ -16,7 +16,7 @@ services:
   web:
     image: node:lts
     user: 'node'
-    working_dir: /repository/src 
+    working_dir: /repository/src
     env_file: .env
     environment:
       - NODE_ENV=production
@@ -26,7 +26,7 @@ services:
       - '3000:3000'
     volumes:
       - ./:/repository
-    command: 'npm run testandrun'
+    command: sh -c "npm install && npm run testandrun"  # <-- this line installs modules before running
 
 volumes:
   group-project:
