--- a/ProjectSourceCode/.gitignore
+++ b/ProjectSourceCode/.gitignore
@@ -42,7 +42,7 @@ build/Release
 node_modules/
 jspm_packages/
 
-# Snowpack dependency directory (https://snowpack.dev/)
+# Snowpack dependency directory (https://snowpack.dev/")
 web_modules/
 
 # TypeScript cache
@@ -134,3 +134,7 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Uploaded user files (do NOT track uploads)
+uploads/
+
