--- a/ProjectSourceCode/package.json
+++ b/ProjectSourceCode/package.json
@@ -1,5 +1,15 @@
 {
+  "name": "projectsourcecode",
+  "version": "1.0.0",
+  "description": "CSCI 3308 Project",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "testandrun": "node index.js"
+  },
   "dependencies": {
-    "express-session": "^1.18.1"
+    "express": "^4.18.2",
+    "express-session": "^1.18.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
