--- a/ProjectSourceCode/src/package.json
+++ b/ProjectSourceCode/src/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.18.1",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
