--- a/ProjectSourceCode/package.json
+++ b/ProjectSourceCode/package.json
@@ -8,7 +8,8 @@
     "testandrun": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.21.2",
+    "express-handlebars": "^8.0.3",
     "express-session": "^1.18.1",
     "multer": "^1.4.5-lts.1"
   }
