--- a/ProjectSourceCode/package.json
+++ b/ProjectSourceCode/package.json
@@ -11,6 +11,7 @@
     "express": "^4.21.2",
     "express-handlebars": "^8.0.3",
     "express-session": "^1.18.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.16.3"
   }
 }
