--- a/ProjectSourceCode/package.json
+++ b/ProjectSourceCode/package.json
@@ -8,6 +8,8 @@
     "testandrun": "node index.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.3",
     "express-session": "^1.18.1",
