--- a/ProjectSourceCode/docker-compose.yaml
+++ b/ProjectSourceCode/docker-compose.yaml
@@ -1,4 +1,5 @@
-version: "3.8"
+version: '3.8'
+
 
 services:
   db:
@@ -13,20 +14,22 @@ services:
       - group-project:/var/lib/postgresql/data
       - ./src/init_data:/docker-entrypoint-initdb.d
 
+
   web:
     image: node:lts
+    user: 'node'
     working_dir: /repository/src
     env_file: .env
     environment:
-      NODE_ENV: production
+      - NODE_ENV=development
     depends_on:
       - db
     ports:
       - '3000:3000'
     volumes:
-      - ./src:/repository/src
-      - ./uploads:/repository/src/uploads
-    command: sh -c "npm install && npm run testandrun"
+      - ./:/repository
+    command: sh -c "npm install && npm run testandrun"  # <-- this line installs modules before running
+
 
 volumes:
   group-project:
