--- a/ProjectSourceCode/src/package.json
+++ b/ProjectSourceCode/src/package.json
@@ -1,20 +1,34 @@
 {
-  "name": "projectsourcecode",
+  "name": "tinynews",
   "version": "1.0.0",
-  "description": "Basic user registration app",
+  "description": "Basic user registration app with TinyNews features",
   "main": "index.js",
-  "scripts": {
-    "testandrun": "node index.js",
-    "seed": "node src/init_data/seed.js"
-  },
   "author": "Your Name",
   "license": "MIT",
+  "scripts": {
+    "prestart": "npm install",
+    "start": "nodemon src/index.js",
+    "test": "mocha",
+    "testandrun": "npm run prestart && npm run test && npm start",
+    "seed": "node src/init_data/seed.js"
+  },
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "axios": "^1.1.3",
+    "bcryptjs": "^2.4.0",
+    "body-parser": "1.20.0",
     "express": "^4.18.2",
-    "express-handlebars": "^7.0.7",
+    "express-handlebars": "^7.1.2",
     "express-session": "^1.18.1",
+    "handlebars": "^4.7.8",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.10.0",
-    "multer": "^1.4.5-lts.1"
+    "pg-promise": "^10.11.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^6.2.2",
+    "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5"
   }
 }
